Adding polymorphism and test refactoring for testing polimorphism